--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,9 @@
         </a>
         <div class="navbar-menu">
             <a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a>
-            <a href="{{ '/about' | prepend: site.baseurl }}">About</a>
+            <a href="{{ '/#' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
+            <a href="{{ '/#' | prepend: site.baseurl }}">FYI</a>
+            <a href="{{ 'https://web.ganisrafi.my.id' | prepend: site.baseurl }}">Media Sosial</a>
         </div>
         <div class="navbar-mobile-menu" onclick="">
             <span class="icon-menu cross"><span class="middle"></span></span>
