--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,18 @@
             <span>{{ site.name }}</span>
         </a>
         <div class="navbar-menu">
-            <a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a>
-            <a href="{{ '/#' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
+            <a href="{{ '/archives' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
             <a href="{{ '/#' | prepend: site.baseurl }}">FYI</a>
-            <a href="{{ 'https://web.ganisrafi.my.id' | prepend: site.baseurl }}">Media Sosial</a>
+            <a href="{{ '/#' | prepend: site.baseurl }}">Hunting Jadul</a>
+            <a href="https://web.ganisrafi.my.id" >Media Sosial</a>
         </div>
         <div class="navbar-mobile-menu" onclick="">
             <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
-                <li><a href="{{ '/archives' | prepend: site.baseurl }}">Archives</a></li>
-                <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+                <li><a href="{{ '/' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a></li>
+                <li><a href="{{ '/' | prepend: site.baseurl }}">FYI</a></li>
+                <li><a href="{{ '/' | prepend: site.baseurl }}">Hunting Jadul</a></li>
+                <li><a href="https://web.ganisrafi.my.id">Media Sosial</a></li>
             </ul>
         </div>
     </div>
