--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <span>{{ site.name }}</span>
         </a>
         <div class="navbar-menu">
-            <a href="{{ '/archives' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
+            <a href="{{ '/#' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
             <a href="{{ '/#' | prepend: site.baseurl }}">FYI</a>
             <a href="{{ '/#' | prepend: site.baseurl }}">Hunting Jadul</a>
             <a href="https://web.ganisrafi.my.id" >Media Sosial</a>
