--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-social">
         <div class="footer-container clearfix">
             <div class="social-list">
-                <a href="{{ '/about.md' | prepend: site.baseurl }}"><span class='iconfont icon-home'></span>&nbsp;&nbsp;Tentang Kami</a>
+                <a href="{{ '/about' | prepend: site.baseurl }}"><span class='iconfont icon-home'></span>&nbsp;&nbsp;Tentang Kami</a>
                 <a rel="nofollow" target="_blank" href="{{site.github}}"><span class='iconfont icon-github'></span>&nbsp;&nbsp;Kontak</a>
                 <a target="_blank" href="{{ '/feed.xml' | prepend: site.baseurl }}"><span class='iconfont icon-rss'></span>&nbsp;&nbsp;RSS</a>
             </div>
