--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <div class="footer-social">
         <div class="footer-container clearfix">
             <div class="social-list">
-                <a href="{{ '/about' | prepend: site.baseurl }}"><span class='icon-info'></span>&nbsp;&nbsp;Tentang Kami</a>
-                <a rel="nofollow" target="_blank" href="{{site.github}}"><span class='icon-envelope-open'></span>&nbsp;&nbsp;Kontak</a>
+                <a href="{{ '/about' | prepend: site.baseurl }}"><span class='icon info'></span>&nbsp;&nbsp;Tentang Kami</a>
+                <a rel="nofollow" target="_blank" href="{{site.github}}"><span class='icon envelope-open'></span>&nbsp;&nbsp;Kontak</a>
                 <a target="_blank" href="{{ '/feed.xml' | prepend: site.baseurl }}"><span class='iconfont icon-rss'></span>&nbsp;&nbsp;RSS</a>
             </div>
         </div>
