--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
                         <img src="{{ '/style/image/logo.png' | prepend: site.baseurl }}" alt="wonder">
                     </a>
                     <div class="info-text">
-                        <p>Copyright &copy; 2016 - {{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code></a></p>
-                        <p>Powered by <a href="http://jekyllrb.com" target="_blank" rel="nofollow"><code>jekyll</code></a>，theme is <a href="https://github.com/lightfish-zhang/pinghsu-jekyll" target="_blank" rel="nofollow"><code>pinghsu</code></a></p>
+                        <p> &copy; {{ site.time | date: '%Y' }} <a href="{{site.resume_site}}"><code>{{ site.author }}</code>Rafi Art Blog</a></p>
+                        <p>Powered by <a href="https://pages.github.com/" target="_blank" rel="nofollow"><code>Github Pages</code></a>，theme is <a href="https://github.com/lightfish-zhang/pinghsu-jekyll/blob/847fc6c2d9b4e78b2c09c996cb7bd42ff8411cfc/README.md" target="_blank" rel="nofollow"><code>pinghsu theme</code></a></p>
                     </div>
                 </div>
             </div>
