--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,1 +1,8 @@
-<iframe src="https://web.ganisrafi.my.id/comment/VGhpcyBzaXRlIHdhcyBidWlsdCBvbiBNYXJjaCAyMSwgMjAyNSwgQVBJIENyYXdsZXIgcG9zdCB1c2luZyBhcGkucnNzMmpzb24uY29tLCBzZXJ2ZXIgbGlnaHR0cGQxLjQuNDUu.html" title="Leave A Comment"></iframe>
+<div id="cusdis_thread"
+  data-host="https://cusdis.com"
+  data-app-id="84c07ae4-43aa-4ab2-9bed-6f83180f2b3d"
+  data-page-id="{{ PAGE_ID }}"
+  data-page-url="{{ PAGE_URL }}"
+  data-page-title="{{ PAGE_TITLE }}"
+></div>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
