--- a/_layouts/full.html
+++ b/_layouts/full.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
+<span class="badge bg-light text-primary">#FYI</span>
+<span class="badge bg-light text-primary">#HuntingJadul</span>
 <article class="main-content page-page" itemscope itemtype="http://schema.org/Article">
     <div class="post-header">
         <h1 class="post-title" itemprop="name headline">
