--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   {% include head.html %}
 
 <body class="bg-grey" gtools_scp_screen_capture_injected="true">
+<span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
+<span class="badge bg-light text-primary">#FYI</span>
+<span class="badge bg-light text-primary">#HuntingJadul</span>
 
     {% include header.html %}
 
