--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer id="footer" class="footer bg-white">
+<span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
+<span class="badge bg-light text-primary">#FYI</span>
+<span class="badge bg-light text-primary">#HuntingJadul</span>
     <div class="footer-social">
         <div class="footer-container clearfix">
             <div class="social-list">
