--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <body class="bg-grey" gtools_scp_screen_capture_injected="true">
 
     {% include header.html %}
-    {% include comment.html %}
+    {% include subheader.html %}
 
     {{ content }}
     
