--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -1,6 +1,6 @@
-<div>
-<span class="fw-bold">Terbaru dari Blog Rafi Art</span>
-<span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
-<span class="badge bg-light text-primary">#FYI</span>
-<span class="badge bg-light text-primary">#HuntingJadul</span>
-</div>
+ <div class="container">
+        <span class="fw-bold">Terbaru dari Blog Rafi Art</span>
+        <span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
+        <span class="badge bg-light text-primary">#FYI</span>
+        <span class="badge bg-light text-primary">#HuntingJadul</span>
+ </div>
