--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -1,6 +1,7 @@
- <div class="container">
+<body class="bg-gray-100 text-center p-10">
+    <h1 class="text-3xl font-bold text-blue-600">Leave a Reply</h1>
         <span class="fw-bold">Terbaru dari Blog Rafi Art</span>
         <span class="badge bg-light text-primary">#TutorialRafiRasyadi</span>
         <span class="badge bg-light text-primary">#FYI</span>
         <span class="badge bg-light text-primary">#HuntingJadul</span>
- </div>
+ </body>
