--- a/_layouts/full.html
+++ b/_layouts/full.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include subheader.html %}
 <article class="main-content page-page" itemscope itemtype="http://schema.org/Article">
     <div class="post-header">
         <h1 class="post-title" itemprop="name headline">
