--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -1,10 +1,9 @@
-
-
-<body>
 <hr/>
 <body class="bg-gray-100 text-center p-10">
-    <h1 class="text-3xl font-bold text-blue-600">Leave a Reply</h1>
+    <h1 class="text-4xl font-bold text-blue-600">Terbaru dari Blog Rafi Art</h1>
 	<hr/>
-    <p class="text-gray-700">Di sini, kamu bisa berkomentar. Cukup pilih postingan, isi nickname, email, tulis komentar, reply komentar, dan kirim!, komentar akan dimoderasi setiap harinya.</p>
+    <h2>Tutorial Rafi Rasyadi</h2>
+	<h2>For Your Information</h2>
+	<h2>Hunting Jadul</h2>
 </body>
 </body>
