--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -1,8 +1,12 @@
 <hr/>
 <body class="bg-gray-100 text-center p-10">
-    <h1 class="text-4xl font-bold text-blue-600">Terbaru dari Blog Rafi Art</h1>
+    <h1 class="text-4xl font-bold text-blue-600">#SeninSemangat</h1>
 	<hr/>
-    <h2>Tutorial Rafi Rasyadi</h2>
-	<h2>For Your Information</h2>
-	<h2>Hunting Jadul</h2>
+    <h2 id="SeninSemangat">Senin, harus tetap semangat!.</h2>
+	<hr/>
+	    <body class="bg-gray-100 text-center p-10">
+    <h1 class="text-4xl font-bold text-blue-600">#JumatBerkah</h1>
+	<hr/>
+    <h2 id="JumatBerkah">Jumat hari yang agung dan penuh keberkahan.</h2>
+	<hr/>
 </body>
