--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -3,7 +3,7 @@
     <h1 class="text-4xl font-bold text-blue-600">#SeninSemangat</h1>
 	<hr/>
     <h2 id="SeninSemangat">Senin, harus tetap semangat!.</h2>
-	<img src="{{ '/style/image/seninsemangat/alt1.jpg' | prepend: site.baseurl }}" alt="senisemangat">
+	<img src="{{ '/style/image/seninsemangat/alt1.jpg' | prepend: site.baseurl }}" alt="senisemangat" width="250">
 	<hr/>
 	    <body class="bg-gray-100 text-center p-10">
     <h1 class="text-4xl font-bold text-blue-600">#JumatBerkah</h1>
