--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -7,5 +7,10 @@
 	    <body class="bg-gray-100 text-center p-10">
     <h1 class="text-4xl font-bold text-blue-600"><b>Jumat Berkah</b></h1>
     <h2 id="JumatBerkah">Jumat hari yang agung dan penuh keberkahan.</h2>
+	<img src="{{ '/style/image/jumatberkah/alt2.jpg' | prepend: site.baseurl }}" alt="jumatberkah" width="350">
 	<hr/>
+    <h1 class="text-4xl font-bold text-blue-600"><b>Tag Artikel</b></h1>
+	<p><a>#tutorial</a></p>
+	<p><a>#Fyi</a></p>
+	<p><a>#HuntingJadul</a></p>
 </body>
