--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -10,7 +10,7 @@
 	<img src="{{ '/style/image/jumatberkah/alt2.jpg' | prepend: site.baseurl }}" alt="jumatberkah" width="350">
 	<hr/>
     <h1 class="text-4xl font-bold text-blue-600"><b>Tag Artikel</b></h1>
-	<p><a>#tutorial</a></p>
-	<p><a>#Fyi</a></p>
-	<p><a>#HuntingJadul</a></p>
+	<p><b>#tutorial</b></p>
+	<p><b>#Fyi</b></p>
+	<p><b>#HuntingJadul</b></p>
 </body>
