--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,18 +5,17 @@
             <span>{{ site.name }}</span>
         </a>
         <div class="navbar-menu">
-            <a href="{{ '/#' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a>
-            <a href="{{ '/#' | prepend: site.baseurl }}">FYI</a>
-            <a href="{{ '/#' | prepend: site.baseurl }}">Hunting Jadul</a>
-            <a href="https://web.ganisrafi.my.id" >Media Sosial</a>
+            <a href="{{ '#SeninSemangat' | prepend: site.baseurl }}">Senin Semangat</a>
+            <a href="{{ '#JumatBerkah' | prepend: site.baseurl }}">Jumat Berkah</a>
+            <a href="https://web.ganisrafi.my.id" >Link-In-Bio</a>
         </div>
         <div class="navbar-mobile-menu" onclick="">
             <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
-                <li><a href="{{ '/' | prepend: site.baseurl }}">Tutorial Rafi Rasyadi</a></li>
-                <li><a href="{{ '/' | prepend: site.baseurl }}">FYI</a></li>
-                <li><a href="{{ '/' | prepend: site.baseurl }}">Hunting Jadul</a></li>
-                <li><a href="https://web.ganisrafi.my.id">Media Sosial</a></li>
+                <li><a href="{{ '#SeninSemangat' | prepend: site.baseurl }}">Senin Semangat</a></li>
+                <li><a href="{{ '#JumatBerkah' | prepend: site.baseurl }}">Jumat Berkah</a></li>
+                <li><a href="https://web.ganisrafi.my.id">Link-In-Bio</a></li>
+                <li><a href="{{ '/about' | prepend: site.baseurl }}">Tentang</a></li>
             </ul>
         </div>
     </div>
