--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -13,5 +13,5 @@
 	<p><b>#tutorial</b></p>
 	<p><b>#Fyi</b></p>
 	<p><b>#HuntingJadul</b></p>
-<i class="bi bi-facebook"></i><a href="https://facebook.com/seni.rafirasyadi">Follow : Fanspage Rafi Art</a>
+<a href="https://facebook.com/seni.rafirasyadi">Follow : Media Sosial di Link-In-Bio</a>
 </body>
