--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -13,5 +13,5 @@
 	<p><b>#tutorial</b></p>
 	<p><b>#Fyi</b></p>
 	<p><b>#HuntingJadul</b></p>
-<a href="https://facebook.com/seni.rafirasyadi">Follow : Media Sosial di Link-In-Bio</a>
+<a href="https://web.ganisrafi.my.id">Follow : Media Sosial di Link-In-Bio</a>
 </body>
