--- a/_includes/subheader.html
+++ b/_includes/subheader.html
@@ -1,15 +1,15 @@
 <hr/>
 <body class="bg-gray-100 text-center p-10">
-    <h1 class="text-4xl font-bold text-blue-600"><b>Senin Semangat</b></h1>
+    <h1 class="text-4xl font-bold text-blue-600"><b>🦾Senin Semangat</b></h1>
     <h2 id="SeninSemangat">Senin, harus tetap semangat!.</h2>
 	<img src="{{ '/style/image/seninsemangat/alt1.jpg' | prepend: site.baseurl }}" alt="senisemangat" width="350">
 	<hr/>
 	    <body class="bg-gray-100 text-center p-10">
-    <h1 class="text-4xl font-bold text-blue-600"><b>Jumat Berkah</b></h1>
+    <h1 class="text-4xl font-bold text-blue-600"><b>👳‍♂️Jumat Berkah</b></h1>
     <h2 id="JumatBerkah">Jumat hari yang agung dan penuh keberkahan.</h2>
 	<img src="{{ '/style/image/jumatberkah/alt2.jpg' | prepend: site.baseurl }}" alt="jumatberkah" width="350">
 	<hr/>
-    <h1 class="text-4xl font-bold text-blue-600"><b>Tag Artikel</b></h1>
+    <h1 class="text-4xl font-bold text-blue-600"><b>📌Tag Artikel</b></h1>
 	<p><b>#tutorial</b></p>
 	<p><b>#Fyi</b></p>
 	<p><b>#HuntingJadul</b></p>
