--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                     </a>
                     <div class="info-text">
                         <p> &copy; 2025 <a href="{{site.resume_site}}">Rafi Art Blog All Right Reserved</a></p>
-                        <p>Powered by <a href="https://pages.github.com/" target="_blank" rel="nofollow"><code>Github Pages</code></a>，theme is <a href="https://github.com/lightfish-zhang/pinghsu-jekyll/blob/847fc6c2d9b4e78b2c09c996cb7bd42ff8411cfc/README.md" target="_blank" rel="nofollow"><code>pinghsu</code></a></p>
+                        <p>Powered by <a href="https://netlify.app/" target="_blank" rel="nofollow"><code>Netlify</code></a>，theme is <a href="https://github.com/lightfish-zhang/pinghsu-jekyll/blob/847fc6c2d9b4e78b2c09c996cb7bd42ff8411cfc/README.md" target="_blank" rel="nofollow"><code>pinghsu</code></a></p>
                     </div>
                 </div>
             </div>
